force-app/main/default/objects/File_Impression__c/File_Impression__c.object-meta.xml
<CustomObject>
    <label>File d&#39;impression</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Files d&#39;impression</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>