force-app/main/default/objects/File_Impression__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Files d&#39;impression</relationshipLabel>
    <relationshipName>Files_d_impression</relationshipName>
    <type>Lookup</type>
</CustomField>