force-app/main/default/objects/File_Impression__c/fields/Attachment_Body__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Body__c</fullName>
    <label>Attachment Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>