force-app/main/default/objects/File_Impression__c/fields/Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Id__c</fullName>
    <externalId>true</externalId>
    <label>Attachment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>