force-app/main/default/objects/File_Impression__c/fields/Carte__c.field-meta.xml
<CustomField>
    <fullName>Carte__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carte</label>
    <referenceTo>Carte__c</referenceTo>
    <relationshipLabel>Files d&#39;impression</relationshipLabel>
    <relationshipName>Files_d_impression</relationshipName>
    <type>Lookup</type>
</CustomField>