force-app/main/default/objects/File_Impression__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Demande</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Files d&#39;impression</relationshipLabel>
    <relationshipName>Files_d_impression</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>