force-app/main/default/objects/File_Impression__c/fields/CodeOffrePrincipale__c.field-meta.xml
<CustomField>
    <fullName>CodeOffrePrincipale__c</fullName>
    <label>Code Offre Principale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>