force-app/main/default/objects/File_Impression__c/fields/Error_log__c.field-meta.xml
<CustomField>
    <fullName>Error_log__c</fullName>
    <label>Error log</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>