force-app/main/default/objects/File_Impression__c/fields/IsCarte__c.field-meta.xml
<CustomField>
    <fullName>IsCarte__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Carte</label>
    <type>Checkbox</type>
</CustomField>