force-app/main/default/objects/File_Impression__c/fields/PayeurFirstName__c.field-meta.xml
<CustomField>
    <fullName>PayeurFirstName__c</fullName>
    <label>PayeurFirstName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>