force-app/main/default/objects/File_Impression__c/fields/PayeurLastName__c.field-meta.xml
<CustomField>
    <fullName>PayeurLastName__c</fullName>
    <label>PayeurLastName</label>
    <length>150</length>
    <type>Text</type>
</CustomField>