force-app/main/default/objects/File_Impression__c/fields/SDoc__c.field-meta.xml
<CustomField>
    <fullName>SDoc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SDoc</label>
    <referenceTo>SDOC__SDoc__c</referenceTo>
    <relationshipLabel>Files d&#39;impression</relationshipLabel>
    <relationshipName>Files_d_impression</relationshipName>
    <type>Lookup</type>
</CustomField>