force-app/main/default/objects/File_Impression__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imprime</fullName>
                <label>Imprimé</label>
            </value>
            <value>
                <fullName>En cours d_impression</fullName>
                <label>En cours d&#39;impression</label>
            </value>
            <value>
                <fullName>A Imprimer</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>