force-app/main/default/objects/File_Impression__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Abonnement</label>
    <referenceTo>Zuora__Subscription__c</referenceTo>
    <relationshipLabel>Files d&#39;impression</relationshipLabel>
    <relationshipName>Files_d_impression</relationshipName>
    <type>Lookup</type>
</CustomField>