force-app/main/default/objects/File_Impression__c/fields/SubscriptionZID__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionZID__c</fullName>
    <externalId>true</externalId>
    <label>Zuora Subscription Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>