force-app/main/default/objects/File_Impression__c/fields/SubscriptionZName__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionZName__c</fullName>
    <externalId>true</externalId>
    <label>Zuora Subscription Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>