force-app/main/default/objects/File_Impression__c/fields/TypeCarte__c.field-meta.xml
<CustomField>
    <fullName>TypeCarte__c</fullName>
    <formula>IF( CodeOffrePrincipale__c =&#39;UI1CDD&#39;,&#39;UI1&#39;,  IF(CodeOffrePrincipale__c =&#39;UI1CDI&#39;, &#39;UI1&#39;,  IF(CodeOffrePrincipale__c =&#39;UI2CDI&#39;, &#39;UI2&#39;,  IF(CodeOffrePrincipale__c =&#39;UI2CDD&#39;,&#39;UI2&#39;,  IF(CodeOffrePrincipale__c =&#39;UI3CDI&#39;, &#39;UI3&#39;,  IF(CodeOffrePrincipale__c =&#39;UI3CDD&#39;, &#39;UI3&#39;, IF(CodeOffrePrincipale__c =&#39;UUCDI&#39;, &#39;UU&#39;,  IF(CodeOffrePrincipale__c =&#39;UUCDD&#39;, &#39;UU&#39;,&#39;&#39;) ) ) ) ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type Carte</label>
    <type>Text</type>
</CustomField>