force-app/main/default/objects/File_Impression__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subscription__c</columns>
    <columns>Account__c</columns>
    <columns>Carte__c</columns>
    <columns>Case__c</columns>
    <columns>Error_log__c</columns>
    <columns>IsCarte__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>SDoc__c</columns>
    <columns>Statut__c</columns>
    <columns>SubscriptionZName__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>11/5/2019 12:00 AM</value>
    </filters>
    <label>Tout</label>
</ListView>